Correction bande blanche en version mobile

--- a/TechniquesDeLInformatique/css/styles.css
+++ b/TechniquesDeLInformatique/css/styles.css
@@ -76,7 +76,9 @@ h2 {
     .zone4 {
         padding: 1em;
     }
-    h1 {
+    h1,
+    #titreTechniques {
         font-weight: 600;
+        font-size: 2.5em;
     }
 }
